--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
         "button-name": "off"
       }
     ],
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
   }
 }
